# pgcopy

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
src/pgcopy/: __init__.py  aws_secrets.py  config.py  connection.py  fdw_copy.py  lambda_function.py  main.py  mapping.py  routing.py
tests/: test_aws_secrets.py  test_connection.py  test_fdw_copy.py  test_lambda_function.py  test_main.py  test_mapping.py  test_routing.py
